--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,100 @@
-omegaconf==2.3.0
-Pillow==10.1.0
+aiofiles==23.2.1
+altair==5.5.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.10.0
+attrs==25.3.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+coloredlogs==15.0.1
+contourpy==1.3.2
+cycler==0.12.1
 einops==0.7.0
-git+https://github.com/tatsy/torchmcubes.git
+exceptiongroup==1.3.0
+fastapi==0.116.1
+ffmpy==0.6.1
+filelock==3.19.1
+flatbuffers==25.2.10
+fonttools==4.59.2
+fsspec==2025.7.0
+glcontext==2.5.0
+gradio==4.8.0
+gradio_client==0.7.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.17.3
+humanfriendly==10.0
+idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+importlib_resources==6.5.2
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.9
+lazy_loader==0.4
+llvmlite==0.44.0
+markdown-it-py==4.0.0
+MarkupSafe==2.1.5
+matplotlib==3.10.6
+mdurl==0.1.2
+moderngl==5.10.0
+mpmath==1.3.0
+narwhals==2.3.0
+networkx==3.4.2
+numba==0.61.2
+numpy==1.26.4
+omegaconf==2.3.0
+onnxruntime==1.22.1
+opencv-python-headless==4.11.0.86
+orjson==3.11.3
+packaging==25.0
+pandas==2.3.2
+Pillow==10.1.0
+platformdirs==4.4.0
+pooch==1.8.2
+protobuf==6.32.0
+psutil==7.0.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.19.2
+PyMatting==1.1.14
+pyparsing==3.2.3
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2025.9.1
+rembg==2.0.67
+requests==2.32.5
+rich==14.1.0
+rpds-py==0.27.1
+safetensors==0.6.2
+scikit-image==0.25.2
+scipy==1.15.3
+semantic-version==2.10.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+starlette==0.47.3
+sympy==1.14.0
+tifffile==2025.5.10
+tokenizers==0.14.1
+tomlkit==0.12.0
+tqdm==4.67.1
 transformers==4.35.0
 trimesh==4.0.5
-rembg
-huggingface-hub
-imageio[ffmpeg]
-gradio
+typer==0.17.3
+typing-inspection==0.4.1
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.35.0
+websockets==11.0.3
 xatlas==0.0.9
-moderngl==5.10.0
-fastapi
-uvicorn
+git+https://github.com/tatsy/torchmcubes.git
